--- a/view/party_form.xml
+++ b/view/party_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- This file is part of account_payment_type module for Tryton.
+<!-- This file is part of party_tradename module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license types. -->
 <data>
