--- a/view/party_form.xml
+++ b/view/party_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license types. -->
 <data>
-    <xpath expr="/form/group[@id=&quot;checkboxes&quot;]"
+    <xpath expr="/form/group[@id='header']/group[@id='checkboxes']"
         position="after">
         <label name="trade_name"/>
         <field name="trade_name"/>
