--- a/view/party_form.xml
+++ b/view/party_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license types. -->
 <data>
-    <xpath expr="//field[@name='lang']" position="before">
+    <xpath expr="//label[@name='lang']" position="before">
         <label name="trade_name"/>
         <field name="trade_name"/>
     </xpath>
